--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -3,6 +3,7 @@ server {
     listen 0.0.0.0:__PORT__;
     server_name _;
 
+    # IBKR uses lots of headers/cookies; give headroom
     large_client_header_buffers 4 16k;
 
     location / {
@@ -10,25 +11,28 @@ server {
         proxy_ssl_verify off;
         proxy_http_version 1.1;
 
+        # Preserve original host & client details
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # Preserve original HTTPS from Render's edge (prevents SSO cookie/redirect loops)
+        # Preserve HTTPS from Render's edge (prevents SSO cookie/redirect loops)
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
 
-        # WebSocket/SSE
+        # WebSocket/SSE friendliness
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_buffering off;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
 
+        # Keep upstream redirects intact
         proxy_redirect off;
     }
 
+    # Simple health check
     location = /healthz { return 200 "ok\n"; add_header Content-Type text/plain; }
 }
 
