--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,14 +1,18 @@
-# nginx/app.conf  (Template with placeholders)
+# nginx/app.conf (Template with placeholders)
+# NOTE: This is loaded by entrypoint and written to /home/app/nginx-conf/conf.d/app.conf
+
 server {
     listen 0.0.0.0:__PORT__;
     server_name _;
 
     # IBKR uses lots of headers/cookies; give headroom
-    large_client_header_buffers 4 16k;
+    large_client_header_buffers 8 64k;
 
+    # --- Main reverse proxy to the local HTTPS gateway ---
     location / {
         proxy_pass https://127.0.0.1:__GATEWAY_PORT__;
         proxy_ssl_verify off;
+        proxy_ssl_server_name on;
         proxy_http_version 1.1;
 
         # Preserve original host & client details
@@ -16,23 +20,26 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # Preserve HTTPS from Render's edge (prevents SSO cookie/redirect loops)
-        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        # Force what the app expects behind TLS edge
+        proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Forwarded-Port 443;
 
         # WebSocket/SSE friendliness
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_buffering off;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
 
-        # Keep upstream redirects intact
-        proxy_redirect off;
+        # Rewrite absolute redirects from the gateway
+        proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ $scheme://$host/;
+        proxy_redirect https://localhost:__GATEWAY_PORT__/ $scheme://$host/;
+        proxy_redirect https://localhost/ $scheme://$host/;
     }
 
     # Simple health check
     location = /healthz { return 200 "ok\n"; add_header Content-Type text/plain; }
 }
+
 
