--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,5 +1,5 @@
 # nginx/app.conf (Template with placeholders)
-# NOTE: This is loaded by entrypoint and written to /home/app/nginx-conf/conf.d/app.conf
+# NOTE: entrypoint writes this to /home/app/nginx-conf/conf.d/app.conf
 
 server {
     listen 0.0.0.0:__PORT__;
