--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,17 +5,17 @@ worker_processes auto;
 # PID and all temp/cache paths under /home/app (writable)
 pid /home/app/nginx-runtime/nginx.pid;
 
-# Clean upgrade mapping for WebSockets/SSE
-map $http_upgrade $connection_upgrade {
-  default upgrade;
-  ''      close;
-}
-
 events {
   worker_connections 1024;
 }
 
 http {
+  # Clean upgrade mapping for WebSockets/SSE (must be inside http {})
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+  }
+
   # Logs to container stdout/stderr
   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                   '$status $body_bytes_sent "$http_referer" '
