--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,5 +1,5 @@
 # nginx/app.conf (Template with placeholders)
-# NOTE: entrypoint writes this to /home/app/nginx-conf/conf.d/app.conf
+# entrypoint writes this to /home/app/nginx-conf/conf.d/app.conf
 
 server {
     listen 0.0.0.0:__PORT__;
@@ -36,10 +36,14 @@ server {
         proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ $scheme://$host/;
         proxy_redirect https://localhost:__GATEWAY_PORT__/ $scheme://$host/;
         proxy_redirect https://localhost/ $scheme://$host/;
+
+        # *** CRITICAL: rewrite upstream cookies from localhost -> your host ***
+        proxy_cookie_domain ~.* $host;
+        # normalize any odd cookie Path to /
+        proxy_cookie_path ~*^/.* /;
     }
 
     # Simple health check
     location = /healthz { return 200 "ok\n"; add_header Content-Type text/plain; }
 }
-
 
