--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -15,31 +15,39 @@ server {
         proxy_ssl_server_name on;
         proxy_http_version 1.1;
 
-        # Preserve original host & client details
-        proxy_set_header Host $host;
+        # IMPORTANT: Make the upstream *believe* requests are for localhost.
+        # IBKR gateway often ties cookies/flows to "localhost".
+        proxy_set_header Host localhost:__GATEWAY_PORT__;
+        proxy_set_header X-Forwarded-Host $host;
+
+        # Tell the app it is behind TLS at the edge (Render)
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Port 443;
+
+        # Preserve client details
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        # Force what the app expects behind TLS edge
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port 443;
-
-        # WebSocket/SSE friendliness
+        # WebSocket/SSE
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_buffering off;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
 
-        # Rewrite absolute redirects from the gateway
+        # Rewrite absolute redirects from the gateway (Location:)
         proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ $scheme://$host/;
         proxy_redirect https://localhost:__GATEWAY_PORT__/ $scheme://$host/;
         proxy_redirect https://localhost/ $scheme://$host/;
 
-        # *** CRITICAL: rewrite upstream cookies from localhost -> your host ***
+        # --- CRITICAL: rewrite upstream cookies so they stick to your public host ---
+        # Handle explicit localhost/127.0.0.1 cookie domains
+        proxy_cookie_domain localhost $host;
+        proxy_cookie_domain 127.0.0.1 $host;
+        # Safety net: if upstream sets any other explicit domain, map it to our host
         proxy_cookie_domain ~.* $host;
-        # normalize any odd cookie Path to /
+
+        # Normalize cookie path (some flows set deep paths)
         proxy_cookie_path ~*^/.* /;
     }
 
