--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,57 +1,57 @@
-# nginx/app.conf (Template with placeholders)
-# entrypoint writes this to /home/app/nginx-conf/conf.d/app.conf
+# Proxies all traffic to the IBKR HTTPS gateway on 127.0.0.1:__GATEWAY_PORT__
+# and fixes redirects + cookies so the browser session sticks (no login loop).
 
 server {
     listen 0.0.0.0:__PORT__;
     server_name _;
 
-    # IBKR uses lots of headers/cookies; give headroom
-    large_client_header_buffers 8 64k;
+    # IBKR login pages send large headers sometimes
+    large_client_header_buffers 8 32k;
 
-    # --- Main reverse proxy to the local HTTPS gateway ---
     location / {
         proxy_pass https://127.0.0.1:__GATEWAY_PORT__;
-        proxy_ssl_verify off;
-        proxy_ssl_server_name on;
         proxy_http_version 1.1;
 
-        # IMPORTANT: Make the upstream *believe* requests are for localhost.
-        # IBKR gateway often ties cookies/flows to "localhost".
-        proxy_set_header Host localhost:__GATEWAY_PORT__;
-        proxy_set_header X-Forwarded-Host $host;
+        # Upstream is self-signed HTTPS, so disable verification (safe: local hop)
+        proxy_ssl_verify off;
+        proxy_ssl_server_name on;
 
-        # Tell the app it is behind TLS at the edge (Render)
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Port 443;
-
-        # Preserve client details
+        # Preserve original host + proto coming from Render
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $real_proto;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $real_port;
 
-        # WebSocket/SSE
+        # WebSockets and long-poll
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_buffering off;
+        proxy_set_header Connection "upgrade";
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
+        proxy_buffering off;
 
-        # Rewrite absolute redirects from the gateway (Location:)
-        proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ $scheme://$host/;
-        proxy_redirect https://localhost:__GATEWAY_PORT__/ $scheme://$host/;
-        proxy_redirect https://localhost/ $scheme://$host/;
+        # Fix absolute redirects from the gateway
+        proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ /;
+        proxy_redirect https://localhost:__GATEWAY_PORT__/ /;
+        proxy_redirect https://localhost/ /;
 
-        # --- CRITICAL: rewrite upstream cookies so they stick to your public host ---
-        # Handle explicit localhost/127.0.0.1 cookie domains
-        proxy_cookie_domain localhost $host;
+        # Make any localhost cookies usable on your public hostname
         proxy_cookie_domain 127.0.0.1 $host;
-        # Safety net: if upstream sets any other explicit domain, map it to our host
-        proxy_cookie_domain ~.* $host;
+        proxy_cookie_domain localhost $host;
 
-        # Normalize cookie path (some flows set deep paths)
-        proxy_cookie_path ~*^/.* /;
+        # Normalize common cookie paths to root so they apply site-wide
+        proxy_cookie_path /sso/ /;
+        proxy_cookie_path /sso /;
+        proxy_cookie_path /portal.proxy/ /;
+        proxy_cookie_path /portal/ /;
+
+        # Don't leak internal buffering hints
+        proxy_hide_header X-Accel-Buffering;
     }
 
-    # Simple health check
-    location = /healthz { return 200 "ok\n"; add_header Content-Type text/plain; }
+    location = /healthz {
+        add_header Content-Type text/plain;
+        return 200 "ok\n";
+    }
 }
-
