--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,57 +1,54 @@
-# Proxies all traffic to the IBKR HTTPS gateway on 127.0.0.1:__GATEWAY_PORT__
-# and fixes redirects + cookies so the browser session sticks (no login loop).
-
+# Simple, transparent reverse proxy: Public :$PORT -> IBKR Gateway https://127.0.0.1:5000
 server {
-    listen 0.0.0.0:__PORT__;
+    listen 0.0.0.0:$PORT;
     server_name _;
 
-    # IBKR login pages send large headers sometimes
-    large_client_header_buffers 8 32k;
+    # IBKR pages can have many/large headers
+    large_client_header_buffers 4 16k;
 
     location / {
-        proxy_pass https://127.0.0.1:__GATEWAY_PORT__;
+        # Upstream is the gateway's HTTPS
+        proxy_pass https://127.0.0.1:5000;
+
+        # TLS to upstream: we don't verify the self-signed cert
+        proxy_ssl_server_name on;
+        proxy_ssl_verify      off;
+
+        # HTTP/1.1 for websockets/keepalive
         proxy_http_version 1.1;
 
-        # Upstream is self-signed HTTPS, so disable verification (safe: local hop)
-        proxy_ssl_verify off;
-        proxy_ssl_server_name on;
-
-        # Preserve original host + proto coming from Render
+        # Preserve original host so Set-Cookie is minted for our public host
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $real_proto;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $real_port;
 
-        # WebSockets and long-poll
+        # Forward real client info
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # MOST IMPORTANT: tell upstream the original client came via HTTPS
+        # so it uses Secure cookies and avoids login loops
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-Host  $host;
+        proxy_set_header X-Forwarded-Port  443;
+
+        # WebSocket / SSE friendliness
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 3600s;
-        proxy_send_timeout 3600s;
+        proxy_set_header Connection $connection_upgrade;
         proxy_buffering off;
 
-        # Fix absolute redirects from the gateway
-        proxy_redirect https://127.0.0.1:__GATEWAY_PORT__/ /;
-        proxy_redirect https://localhost:__GATEWAY_PORT__/ /;
-        proxy_redirect https://localhost/ /;
-
-        # Make any localhost cookies usable on your public hostname
-        proxy_cookie_domain 127.0.0.1 $host;
-        proxy_cookie_domain localhost $host;
-
-        # Normalize common cookie paths to root so they apply site-wide
-        proxy_cookie_path /sso/ /;
-        proxy_cookie_path /sso /;
-        proxy_cookie_path /portal.proxy/ /;
-        proxy_cookie_path /portal/ /;
-
-        # Don't leak internal buffering hints
-        proxy_hide_header X-Accel-Buffering;
+        # Don’t rewrite upstream redirects/cookies unless necessary
+        proxy_redirect off;
     }
 
+    # Health check
     location = /healthz {
         add_header Content-Type text/plain;
         return 200 "ok\n";
     }
 }
+
+# Helper to correctly set Connection header with Upgrade
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
