--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,54 +1,38 @@
-# Simple, transparent reverse proxy: Public :$PORT -> IBKR Gateway https://127.0.0.1:5000
+# nginx/app.conf
+
 server {
-    listen 0.0.0.0:$PORT;
-    server_name _;
+  # Render will forward HTTPS -> this container on port 10000.
+  listen 0.0.0.0:10000;
+  server_name _;
 
-    # IBKR pages can have many/large headers
-    large_client_header_buffers 4 16k;
+  # (Optional) quick health check endpoint
+  location = /healthz { return 200; }
 
-    location / {
-        # Upstream is the gateway's HTTPS
-        proxy_pass https://127.0.0.1:5000;
+  # Everything else proxies to the IBKR Client Portal Gateway (listening on 5000 inside the container).
+  location / {
+    proxy_pass https://127.0.0.1:5000;
+    proxy_ssl_verify off;
 
-        # TLS to upstream: we don't verify the self-signed cert
-        proxy_ssl_server_name on;
-        proxy_ssl_verify      off;
+    # Make the upstream "see" the real public request details
+    proxy_http_version 1.1;
+    proxy_set_header Host               $host;
+    proxy_set_header X-Forwarded-Proto  https;
+    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host   $host;
+    proxy_set_header X-Forwarded-Port   443;
+    proxy_set_header Connection         "";
 
-        # HTTP/1.1 for websockets/keepalive
-        proxy_http_version 1.1;
+    # Timeouts a bit higher to avoid auth race-y drops
+    proxy_read_timeout 180s;
+    proxy_send_timeout 180s;
 
-        # Preserve original host so Set-Cookie is minted for our public host
-        proxy_set_header Host $host;
+    # ---- Cookie helpers (safe & minimal) ----
+    # If upstream ever sets Domain=localhost, rewrite to your public host.
+    proxy_cookie_domain ~localhost $host;
 
-        # Forward real client info
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        # MOST IMPORTANT: tell upstream the original client came via HTTPS
-        # so it uses Secure cookies and avoids login loops
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-Host  $host;
-        proxy_set_header X-Forwarded-Port  443;
-
-        # WebSocket / SSE friendliness
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_buffering off;
-
-        # Don’t rewrite upstream redirects/cookies unless necessary
-        proxy_redirect off;
-    }
-
-    # Health check
-    location = /healthz {
-        add_header Content-Type text/plain;
-        return 200 "ok\n";
-    }
-}
-
-# Helper to correctly set Connection header with Upgrade
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
+    # Ensure cookies remain usable via your HTTPS public URL.
+    # If your nginx doesn't support this directive, delete the line.
+    proxy_cookie_flags ~ secure samesite=None;
+  }
 }
 
