--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,38 +1,70 @@
-# nginx/app.conf
-
 server {
-  # Render will forward HTTPS -> this container on port 10000.
-  listen 0.0.0.0:10000;
+  listen 10000;
   server_name _;
 
-  # (Optional) quick health check endpoint
-  location = /healthz { return 200; }
-
-  # Everything else proxies to the IBKR Client Portal Gateway (listening on 5000 inside the container).
-  location / {
-    proxy_pass https://127.0.0.1:5000;
-    proxy_ssl_verify off;
-
-    # Make the upstream "see" the real public request details
-    proxy_http_version 1.1;
-    proxy_set_header Host               $host;
-    proxy_set_header X-Forwarded-Proto  https;
-    proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host   $host;
-    proxy_set_header X-Forwarded-Port   443;
-    proxy_set_header Connection         "";
-
-    # Timeouts a bit higher to avoid auth race-y drops
-    proxy_read_timeout 180s;
-    proxy_send_timeout 180s;
-
-    # ---- Cookie helpers (safe & minimal) ----
-    # If upstream ever sets Domain=localhost, rewrite to your public host.
-    proxy_cookie_domain ~localhost $host;
-
-    # Ensure cookies remain usable via your HTTPS public URL.
-    # If your nginx doesn't support this directive, delete the line.
-    proxy_cookie_flags ~ secure samesite=None;
+  # Default landing -> IBKR login
+  location = / {
+    return 302 /sso/Login?forwardTo=22&RL=1&ip2loc=US;
   }
+
+  # --- SSO UI (HTML/JS/CSS) ---
+  location /sso/ {
+    proxy_pass https://127.0.0.1:5000;
+    proxy_ssl_server_name on;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # WebSocket upgrade (IBKR UI uses it occasionally)
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+
+    # Cookies must be usable via HTTPS
+    proxy_cookie_path / "/; SameSite=None; Secure";
+
+    # Safety net: rewrite any absolute localhost URLs in HTML/JS
+    sub_filter_once off;
+    sub_filter_types text/html application/javascript;
+    sub_filter "https://localhost:5000" "https://$host";
+    sub_filter "http://localhost:5000"  "https://$host";
+  }
+
+  # --- API passthrough ---
+  location /portal.proxy/ {
+    proxy_pass https://127.0.0.1:5000;
+    proxy_ssl_server_name on;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+
+    proxy_cookie_path / "/; SameSite=None; Secure";
+  }
+
+  # Assets
+  location ~* \.(css|js|png|jpg|jpeg|gif|svg|woff2?)$ {
+    proxy_pass https://127.0.0.1:5000;
+    proxy_ssl_server_name on;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Proto https;
+  }
+
+  # Health
+  location = /healthz { return 200; }
+}
+
+# Required for WebSocket upgrade mapping
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
 }
 
