--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,70 +1,41 @@
 server {
-  listen 10000;
+  listen 0.0.0.0:$PORT;
   server_name _;
 
-  # Default landing -> IBKR login
+  # Never append the internal port to redirects
+  absolute_redirect off;
+  port_in_redirect off;
+
+  # Send the root path to the login screen (RELATIVE redirect, no host/port)
   location = / {
     return 302 /sso/Login?forwardTo=22&RL=1&ip2loc=US;
   }
 
-  # --- SSO UI (HTML/JS/CSS) ---
-  location /sso/ {
-    proxy_pass https://127.0.0.1:5000;
-    proxy_ssl_server_name on;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-    # WebSocket upgrade (IBKR UI uses it occasionally)
+  # Everything else is proxied to the Gateway on 127.0.0.1:5000
+  location / {
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
+    proxy_pass https://127.0.0.1:5000;
 
-    # Cookies must be usable via HTTPS
-    proxy_cookie_path / "/; SameSite=None; Secure";
+    # Tell the app we're behind HTTPS and on this host
+    proxy_set_header Host              $host;
+    proxy_set_header X-Forwarded-Host  $host;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header X-Forwarded-Port  443;
 
-    # Safety net: rewrite any absolute localhost URLs in HTML/JS
+    # Upstream uses a self-signed cert; we terminate TLS at Render
+    proxy_ssl_verify off;
+
+    proxy_buffering off;
+
+    # Rewrite any absolute redirects from upstream to your host (no port)
+    proxy_redirect https://127.0.0.1:5000/ https://$host/;
+    proxy_redirect  http://127.0.0.1:5000/ https://$host/;
+
+    # Belt-and-suspenders: rewrite hardcoded localhost links in HTML/JS
     sub_filter_once off;
-    sub_filter_types text/html application/javascript;
+    sub_filter_types *;
     sub_filter "https://localhost:5000" "https://$host";
-    sub_filter "http://localhost:5000"  "https://$host";
+    sub_filter "http://localhost:5000" "https://$host";
   }
-
-  # --- API passthrough ---
-  location /portal.proxy/ {
-    proxy_pass https://127.0.0.1:5000;
-    proxy_ssl_server_name on;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
-    proxy_cookie_path / "/; SameSite=None; Secure";
-  }
-
-  # Assets
-  location ~* \.(css|js|png|jpg|jpeg|gif|svg|woff2?)$ {
-    proxy_pass https://127.0.0.1:5000;
-    proxy_ssl_server_name on;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Proto https;
-  }
-
-  # Health
-  location = /healthz { return 200; }
-}
-
-# Required for WebSocket upgrade mapping
-map $http_upgrade $connection_upgrade {
-  default upgrade;
-  ''      close;
 }
 
