--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,41 +1,43 @@
 server {
-  listen 0.0.0.0:$PORT;
+  # Render routes traffic to port 10000 inside the container.
+  listen 0.0.0.0:10000;
   server_name _;
 
-  # Never append the internal port to redirects
+  # Avoid leaking the internal port into redirects
   absolute_redirect off;
   port_in_redirect off;
 
-  # Send the root path to the login screen (RELATIVE redirect, no host/port)
+  # Send "/" to the login page via a RELATIVE redirect (no host/port)
   location = / {
     return 302 /sso/Login?forwardTo=22&RL=1&ip2loc=US;
   }
 
-  # Everything else is proxied to the Gateway on 127.0.0.1:5000
+  # Proxy everything else to the IBKR Gateway (terminating TLS at Nginx/Render)
   location / {
     proxy_http_version 1.1;
     proxy_pass https://127.0.0.1:5000;
 
-    # Tell the app we're behind HTTPS and on this host
+    # Inform upstream we're on HTTPS at this host behind a proxy
     proxy_set_header Host              $host;
     proxy_set_header X-Forwarded-Host  $host;
     proxy_set_header X-Forwarded-Proto https;
     proxy_set_header X-Forwarded-Port  443;
 
-    # Upstream uses a self-signed cert; we terminate TLS at Render
+    # Upstream uses self-signed cert; we terminate TLS, so skip verify
     proxy_ssl_verify off;
 
     proxy_buffering off;
 
-    # Rewrite any absolute redirects from upstream to your host (no port)
+    # Rewrite upstream absolute redirects to our public host (no :10000)
     proxy_redirect https://127.0.0.1:5000/ https://$host/;
     proxy_redirect  http://127.0.0.1:5000/ https://$host/;
 
-    # Belt-and-suspenders: rewrite hardcoded localhost links in HTML/JS
+    # Safety net for hardcoded localhost links in HTML/JS
     sub_filter_once off;
     sub_filter_types *;
     sub_filter "https://localhost:5000" "https://$host";
     sub_filter "http://localhost:5000" "https://$host";
   }
 }
+
 
