--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,43 +1,41 @@
+# nginx/app.conf
+# Front door on $PORT (Render) -> proxy to IBKR Gateway on https://127.0.0.1:5000
 server {
-  # Render routes traffic to port 10000 inside the container.
-  listen 0.0.0.0:10000;
-  server_name _;
+  listen       0.0.0.0:$PORT default_server;
+  server_name  _;
 
-  # Avoid leaking the internal port into redirects
-  absolute_redirect off;
-  port_in_redirect off;
+  # Always talk HTTPS to the Gateway and present the correct host/ scheme
+  proxy_http_version 1.1;
+  proxy_ssl_server_name on;
 
-  # Send "/" to the login page via a RELATIVE redirect (no host/port)
-  location = / {
-    return 302 /sso/Login?forwardTo=22&RL=1&ip2loc=US;
-  }
+  proxy_set_header Host              $host;
+  proxy_set_header X-Forwarded-Host  $host;
+  proxy_set_header X-Forwarded-Proto https;
+  proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
 
-  # Proxy everything else to the IBKR Gateway (terminating TLS at Nginx/Render)
+  # --- Cookie rewrite: make the upstream cookie valid for your public host ---
+  # If upstream ever sets Domain=localhost or 127.0.0.1, rewrite to our host.
+  proxy_cookie_domain localhost $host;
+  proxy_cookie_domain 127.0.0.1 $host;
+
+  # Ensure the cookie works cross-site (mobile app + browser) and over HTTPS
+  # We *add* SameSite=None; Secure and normalize the Path.
+  proxy_cookie_path / "/; SameSite=None; Secure";
+
+  # Don’t cache; keep streaming responses
+  proxy_buffering off;
+
+  # Redirect any absolute self-links from the upstream to our public host
+  proxy_redirect https://localhost:5000/ https://$host/;
+  proxy_redirect https://127.0.0.1:5000/ https://$host/;
+
+  # Serve the whole site through the Gateway
   location / {
-    proxy_http_version 1.1;
     proxy_pass https://127.0.0.1:5000;
-
-    # Inform upstream we're on HTTPS at this host behind a proxy
-    proxy_set_header Host              $host;
-    proxy_set_header X-Forwarded-Host  $host;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header X-Forwarded-Port  443;
-
-    # Upstream uses self-signed cert; we terminate TLS, so skip verify
-    proxy_ssl_verify off;
-
-    proxy_buffering off;
-
-    # Rewrite upstream absolute redirects to our public host (no :10000)
-    proxy_redirect https://127.0.0.1:5000/ https://$host/;
-    proxy_redirect  http://127.0.0.1:5000/ https://$host/;
-
-    # Safety net for hardcoded localhost links in HTML/JS
-    sub_filter_once off;
-    sub_filter_types *;
-    sub_filter "https://localhost:5000" "https://$host";
-    sub_filter "http://localhost:5000" "https://$host";
   }
+
+  # Static safety (optional)
+  default_type application/octet-stream;
 }
 
 
